<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        >

        <TextView
            android:id="@+id/textViewRegisterCharacterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_character_screen_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCharacterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/character_name_label"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegisterCharacterTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCharacterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCharacterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/character_description_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCharacterName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCharacterDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:text="@string/register_character_button_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCharacterDescription"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToListButton"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/go_to_list_character_button_label"
            app:layout_constraintTop_toTopOf="@id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>